# inventiv-agents

./: .dockerignore  .env  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  docker-compose.yml
.gemini/commands/: speckit.analyze.toml  speckit.checklist.toml  speckit.clarify.toml  speckit.constitution.toml  speckit.implement.toml  speckit.plan.toml  speckit.specify.toml  speckit.tasks.toml  speckit.taskstoissues.toml
.specify/: init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: gemini.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: checklist-template.md  tasks-template.md
backend/: Cargo.toml
backend/migrations/: 001_initial_schema_with_rls.sql  003_agents_registry.sql  004_agents_registry_indexes_and_grants.sql  005_login_lookup_and_register_rls.sql
backend/src/: error.rs
backend/tests/: agents_api.rs  agents_registry_rls.rs  identity_http.rs  llm_resolve_integration.rs  sse_agent_stream_integration.rs
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  index.css  version.ts
migrations/: 002_observability_schema.sql
scripts/db/: apply-migrations.sh  reset-local-db.sh
scripts/dev/: dev.sh  lib.sh  m4a-mvp-smoke.sh  make-help.txt  migrate-storymap-format-v2.py  (+4 more)
specify/: constitution.md  mvp-engine-validation.md  plan.md  spec.md  testing-checkpoints.md  traceability.md
src/: error.rs  lib.rs  main.rs
tests/: agents_api.rs  agents_registry_rls.rs  identity_rls.rs
(+91 files in other folders)
